# gflip

./: .gitignore  CMakeLists.txt  README.md  insertLicense
cmake/: Config.cmake.in
data/: Vocabulary.voc
doc/: Doxyfile.in
src/: CMakeLists.txt  gflip_mainpage.h
src/applications/: CMakeLists.txt  FeatureExtractor.cpp  GFPLoopClosingTest.cpp  GenerateBoW.cpp  GenerateNN.cpp  LearnVocabularyKMeans.cpp  NNLoopClosingTest.cpp  gflip_cl.cpp  gflip_cl_onequery.cpp
src/gflip/: CMakeLists.txt  gflip_engine.cpp  gflip_engine.hpp
src/utils/: Convolution.hpp  HierarchicalKMeansClustering.h  HierarchicalKMeansClustering.hpp  HistogramDistances.hpp  KMeansClustering.hpp  PoseEstimation.cpp  Regression.cpp  SimpleMinMaxPeakFinder.cpp  SimplePeakFinder.cpp
src/vocabulary/: CMakeLists.txt  KMeansClustering.h  Vocabulary.cpp  Vocabulary.h
